<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.seetatech.seetaverify.config.SettingsActivity$GeneralPreferenceFragment"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.seetatech.seetaverify.config.SettingsActivity$OnlinePreferenceFragment"
        android:title="@string/pref_header_online" />

    <header
        android:fragment="com.seetatech.seetaverify.config.SettingsActivity$OfflinePreferenceFragment"
        android:title="@string/pref_header_offline" />

    <header
        android:fragment="com.seetatech.seetaverify.config.SettingsActivity$AboutPreferenceFragment"
        android:title="@string/pref_header_about" />

</preference-headers>
